Fix nav bug
Solutions dropdown was getting cut off on internal pages

--- a/source/_static/mytheme.css
+++ b/source/_static/mytheme.css
@@ -1147,7 +1147,7 @@ pre {
 		padding-right: 50px;
 	}
 }
-@media (min-width: 1200px) {
+@media (min-width: 1400px) {
 	.site-header--not-home .nav-container {
 		padding-right: 20vw;
 	}
